--- a/realsense_ros2_camera/CMakeLists.txt
+++ b/realsense_ros2_camera/CMakeLists.txt
@@ -130,4 +130,22 @@ install(
   DESTINATION include
 )
 
+if(BUILD_TESTING)
+  find_package(ament_lint_auto REQUIRED)
+  ament_lint_auto_find_test_dependencies()
+
+  ament_add_gtest(test_api test/test_api.cpp)
+  if(TARGET test_api)
+    target_include_directories(test_api PUBLIC
+      ${${PROJECT_NAME}_INCLUDE_DIRS}
+    )
+    ament_target_dependencies(test_api
+      rclcpp
+      sensor_msgs
+      tf2_ros
+      tf2
+      OpenCV)
+  endif()
+endif()
+
 ament_package()
