--- a/realsense_camera_msgs/package.xml
+++ b/realsense_camera_msgs/package.xml
@@ -16,6 +16,8 @@
   <exec_depend>builtin_interfaces</exec_depend>
   <exec_depend>std_msgs</exec_depend>
 
+  <test_depend>ament_lint_common</test_depend>
+
   <member_of_group>rosidl_interface_packages</member_of_group>
 
   <export>
