--- a/realsense_ros2_camera/package.xml
+++ b/realsense_ros2_camera/package.xml
@@ -17,6 +17,7 @@
   <build_depend>tf2_ros</build_depend>
   <build_depend>realsense_camera_msgs</build_depend>
   <build_depend>cv_bridge</build_depend>
+  <build_depend>image_geometry</build_depend>  
 
   <exec_depend>rosidl_default_runtime</exec_depend>
   <exec_depend>builtin_interfaces</exec_depend>
@@ -27,6 +28,7 @@
   <exec_depend>tf2_ros</exec_depend>
   <exec_depend>realsense_camera_msgs</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
+  <exec_depend>image_geometry</exec_depend>
 
   <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_lint_auto</test_depend>
