--- a/realsense_ros2_camera/CMakeLists.txt
+++ b/realsense_ros2_camera/CMakeLists.txt
@@ -134,6 +134,12 @@ install(
   DESTINATION include
 )
 
+# Install launch files.
+install(DIRECTORY
+  launch
+  DESTINATION share/${PROJECT_NAME}/
+)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   ament_lint_auto_find_test_dependencies()
