initial version of refactoring
1. place class declaration to header file
2. change the naming of variables and functions to comply with google naming convention

Signed-off-by: Xiaojun Huang <xiaojun.huang@intel.com>

--- a/realsense_ros2_camera/CMakeLists.txt
+++ b/realsense_ros2_camera/CMakeLists.txt
@@ -91,7 +91,8 @@ include_directories(
 
 add_executable(${PROJECT_NAME}
   include/${PROJECT_NAME}/constants.hpp
-  src/realsense_camera_node.cpp
+  include/${PROJECT_NAME}/base_realsense_node.hpp
+  src/base_realsense_node.cpp
 )
 
 target_link_libraries(${PROJECT_NAME}
