--- a/realsense_ros2_camera/package.xml
+++ b/realsense_ros2_camera/package.xml
@@ -20,7 +20,7 @@
   <build_depend>realsense_camera_msgs</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>image_transport</build_depend>
-  <build_depend>realsense2</build_depend>
+  <build_depend>librealsense2</build_depend>
 
   <exec_depend>rosidl_default_runtime</exec_depend>
   <exec_depend>builtin_interfaces</exec_depend>
@@ -31,7 +31,7 @@
   <exec_depend>tf2_ros</exec_depend>
   <exec_depend>realsense_camera_msgs</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
-  <exec_depend>realsense2</exec_depend>
+  <exec_depend>librealsense2</exec_depend>
 
   <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_lint_auto</test_depend>
