--- a/realsense_ros2_camera/package.xml
+++ b/realsense_ros2_camera/package.xml
@@ -9,33 +9,24 @@
   <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-  <buildtool_depend>rosidl_default_generators</buildtool_depend>
-  <build_depend>builtin_interfaces</build_depend>
-  <build_depend>eigen</build_depend>
-  <build_depend>rclcpp</build_depend>
-  <build_depend>rmw_implementation</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>tf2_ros</build_depend>
-  <build_depend>realsense_camera_msgs</build_depend>
-  <build_depend>cv_bridge</build_depend>
-  <build_depend>image_transport</build_depend>
-  <build_depend>librealsense2</build_depend>
 
-  <exec_depend>rosidl_default_runtime</exec_depend>
-  <exec_depend>builtin_interfaces</exec_depend>
-  <exec_depend>rclcpp</exec_depend>
-  <exec_depend>rmw_implementation</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>sensor_msgs</exec_depend>
-  <exec_depend>tf2_ros</exec_depend>
-  <exec_depend>realsense_camera_msgs</exec_depend>
-  <exec_depend>cv_bridge</exec_depend>
-  <exec_depend>librealsense2</exec_depend>
+  <build_depend>eigen</build_depend>
+
+  <depend>builtin_interfaces</depend>
+  <depend>cv_bridge</depend>
+  <depend>image_transport</depend>
+  <depend>librealsense2</depend>
+  <depend>rclcpp</depend>
+  <depend>realsense_camera_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>std_msgs</depend>
+  <depend>tf2</depend>
+  <depend>tf2_ros</depend>
 
   <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+  <test_depend>libopencv-dev</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
