--- a/realsense_msgs/CMakeLists.txt
+++ b/realsense_msgs/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(realsense_camera_msgs)
+project(realsense_msgs)
+
+# Default to C99
+if(NOT CMAKE_C_STANDARD)
+  set(CMAKE_C_STANDARD 99)
+endif()
 
 if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 14)
@@ -12,16 +17,15 @@ endif()
 
 find_package(ament_cmake REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
-find_package(builtin_interfaces REQUIRED)
 find_package(std_msgs REQUIRED)
 
 set(msg_files
   "msg/IMUInfo.msg"
-  "msg/Extrinsics.msg"
 )
+
 rosidl_generate_interfaces(${PROJECT_NAME}
   ${msg_files}
-  DEPENDENCIES builtin_interfaces std_msgs
+  DEPENDENCIES std_msgs
   ADD_LINTER_TESTS
 )
 
