--- a/examples/package.xml
+++ b/examples/package.xml
@@ -13,6 +13,8 @@
   <depend>nav_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>cv_bridge</depend>
+  <depend>tf2</depend>
+  <depend>tf2_ros</depend>
   <depend>realsense_ros</depend>
   <depend>realsense_msgs</depend>
 
