--- a/realsense_ros/config/d415.yaml
+++ b/realsense_ros/config/d415.yaml
@@ -4,6 +4,7 @@
       serial_no: 725112060212 # d415
       align_depth: true
       enable_pointcloud: true
+      #base_frame_id:
       color0:
         enabled: true
         resolution: [640,480]
