rename realsense_examples as realsense_node
Signed-off-by: Xiaojun <xiaojun.huang@intel.com>

--- a/realsense_node/package.xml
+++ b/realsense_node/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>realsense_examples</name>
+  <name>realsense_node</name>
   <version>0.0.1</version>
-  <description>Examples for ROS2 realsense package</description>
+  <description>ROS2 realsense node</description>
   <maintainer email="xiaojun.huang@intel.com">Xiaojun Huang</maintainer>
   <license>Apache License 2.0</license>
 
