--- a/realsense_node/CMakeLists.txt
+++ b/realsense_node/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(realsense_examples)
+project(realsense_node)
 
 # Default to C99
 if(NOT CMAKE_C_STANDARD)
