--- a/realsense_ros/config/d415.yaml
+++ b/realsense_ros/config/d415.yaml
@@ -1,23 +1,22 @@
-/d415:
-  camera:
-    ros__parameters:
-      serial_no: 725112060212 # d415
-      align_depth: true
-      enable_pointcloud: true
-      #base_frame_id:
-      color0:
-        enabled: true
-        resolution: [640,480]
-        fps: 30
-      depth0:
-        enabled: true
-        resolution: [640,480]
-        fps: 30
-      infra1:
-        enabled: true
-        resolution: [640,480]
-        fps: 30
-      infra2:
-        enabled: true
-        resolution: [640,480]
-        fps: 30
+camera:
+  ros__parameters:
+    serial_no: 725112060212 # d415
+    align_depth: false
+    enable_pointcloud: false
+    #base_frame_id:
+    color0:
+      enabled: true
+      resolution: [640,480]
+      fps: 30
+    depth0:
+      enabled: true
+      resolution: [640,480]
+      fps: 30
+    infra1:
+      enabled: true
+      resolution: [640,480]
+      fps: 30
+    infra2:
+      enabled: true
+      resolution: [640,480]
+      fps: 30
