provide 2 opitons for the pointcloud topic
1. sparse mode: only publish valid points, but without structrual
information, e.g. width and height
2. dense mode: publish all points including invalid ones with width and
height information.

Signed-off-by: Xiaojun <xiaojun.huang@intel.com>

--- a/realsense_ros/config/d435.yaml
+++ b/realsense_ros/config/d435.yaml
@@ -3,6 +3,7 @@ camera:
     serial_no: 727212071015 # d435
     align_depth: false
     enable_pointcloud: false
+    dense_pointcloud: true
     #base_frame_id:
     color0:
       enabled: true
