--- a/realsense_ros/config/d415.yaml
+++ b/realsense_ros/config/d415.yaml
@@ -3,6 +3,7 @@ camera:
     serial_no: 725112060212 # d415
     align_depth: false
     enable_pointcloud: false
+    dense_pointcloud: true
     #base_frame_id:
     color0:
       enabled: true
