--- a/realsense_ros/config/multi_cams.yaml
+++ b/realsense_ros/config/multi_cams.yaml
@@ -4,6 +4,7 @@
       serial_no: 727212071015 #d435
       align_depth: true
       enable_pointcloud: true
+      dense_pointcloud: true
       #base_frame_id:
       color0:
         enabled: true
