--- a/realsense_examples/config/d435.yaml
+++ b/realsense_examples/config/d435.yaml
@@ -3,7 +3,7 @@
     ros__parameters:
       serial_no: 819312071869 # d435
       base_frame_id: d435_link
-      align_depth: false
+      align_depth: true
       enable_pointcloud: true
       dense_pointcloud: true
       color0:
