--- a/realsense_ros/package.xml
+++ b/realsense_ros/package.xml
@@ -19,11 +19,13 @@
   <depend>pcl_conversions</depend>
   <depend>realsense2</depend>
   <depend>realsense_msgs</depend>
+  <depend>image_transport</depend>
 
   <exec_depend>launch_ros</exec_depend>
   
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+  <test_depend>ament_cmake_gtest</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
