fix test errors

--- a/realsense_node/CMakeLists.txt
+++ b/realsense_node/CMakeLists.txt
@@ -91,8 +91,9 @@ ament_target_dependencies(realsense_node
 
 install(TARGETS realsense_node
   DESTINATION lib/${PROJECT_NAME}
-  ARCHIVE DESTINATION lib
-  LIBRARY DESTINATION lib
+)
+
+install(TARGETS realsense_node
   RUNTIME DESTINATION bin
 )
 
