--- a/realsense_ros/package.xml
+++ b/realsense_ros/package.xml
@@ -9,7 +9,6 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend>rcl</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
   <depend>nav_msgs</depend>
@@ -21,6 +20,8 @@
   <depend>librealsense2</depend>
   <depend>realsense_msgs</depend>
   <depend>image_transport</depend>
+
+  <build_depend>rcl</build_depend>
 
   <exec_depend>launch_ros</exec_depend>
   
